<resources>
    <string name="app_name">SmartMeal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recipe_list">Recipes</string>
    <string name="extra_recipe_id" translatable="false">recipeId</string>
    <string name="minutes">minutes</string>
    <string name="placeholder" translatable="false">-PLACEHOLDER-</string>
    <string name="servings_for_persons">Ingredients for -PLACEHOLDER- servings.</string>
    <string name="go">Go!</string>
    <string name="search">Search</string>
    <string name="abort">Abort</string>
    <string name="none">None</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="search_hint">Search recipes</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="edit_search_filters">Edit search filters</string>
    <string name="save_filters">Save filters</string>
    <string name="reset_filters">Reset filters</string>
    <string name="exclude_allergens">Exclude allergens</string>
    <string name="no_search_results">No results for your search parameter</string>
</resources>
