<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_filter_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".recipes.filter.EditFilterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:onClick="saveFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save_filters"
            android:lines="2"
            android:textAllCaps="false"
            android:textColor="@color/background_material_light"
            android:layout_margin="@dimen/small_margin"
            />

        <Button
            android:onClick="resetFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/reset_filters"
            android:lines="2"
            android:textAllCaps="false"
            android:textColor="@color/background_material_light"
            android:layout_margin="@dimen/small_margin"
            />

        <Button
            android:onClick="abort"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/abort"
            android:textAllCaps="false"
            android:textColor="@color/background_material_light"
            android:layout_margin="@dimen/small_margin"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_vegan_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/rb_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"
                    android:layout_margin="@dimen/small_margin"
                    />
                <RadioButton
                    android:id="@+id/rb_vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"
                    android:layout_margin="@dimen/small_margin"/>
                <RadioButton
                    android:id="@+id/rb_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:layout_margin="@dimen/small_margin"
                    android:checked="true"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_material_dark"
                android:layout_margin="@dimen/medium_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/exclude_allergens"/>

            <ListView
                android:id="@+id/allergens_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                ></ListView>

            <TextView
                android:id="@+id/no_allergens_excluded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="No allergens excluded"/>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
